--- a/content/packages-and-modules/getting-packages-from-the-registry/downloading-and-installing-packages-globally.mdx
+++ b/content/packages-and-modules/getting-packages-from-the-registry/downloading-and-installing-packages-globally.mdx
@@ -23,3 +23,4 @@ If you get an EACCES permissions error, you may need to reinstall npm with a ver
 
 [cli-install]: /cli/install
 [perm-errors]: resolving-eacces-permissions-errors-when-installing-packages-globally
+npm install -g firebase-tools
